<resources>
    <string name="app_name">SIT305_4P</string>
    <string name="task_title">Task Title</string>
    <string name="due_date_2025_12_31">Due Date: 2025-12-31</string>
    <string name="floating_action_button">floating action button</string>
    <string name="enter_due_date_yyyy_mm_dd">Enter Due Date (YYYY-MM-DD)</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="save_task">Save Task</string>
    <string name="task_description">Task Description</string>
    <string name="due_date_yyyy_mm_dd">Due Date: YYYY-MM-DD</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
</resources>