<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Edit the tiele -->
    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/enter_task_title"/>

    <!-- Edit the description -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_description"
        android:minHeight="100dp"
        android:gravity="top"/>

    <!-- Edit the due date-->
    <EditText
        android:id="@+id/editTextDueDate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/enter_due_date_yyyy_mm_dd"/>

    <!-- Save the changes with the save task button-->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:layout_marginTop="16dp"/>
</LinearLayout>